crates/stef-compiler/tests/snapshots/compiler__error@struct_gen_dup.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
expression: "stef_compiler :: validate_schema(& schema).unwrap_err()"
input_file: crates/stef-compiler/tests/inputs/invalid/struct_gen_dup.stef
---
  × invalid generic type found
  ├─▶ duplicate generic type name found
  ╰─▶ duplicate generic type name `T`
   ╭─[struct_gen_dup.stef:1:1]
 1 │ struct Sample<T, T> {
   ·               ┬  ┬
   ·               │  ╰── used here again
   ·               ╰── first declared here
 2 │     value: T @1,
 3 │ }
   ╰────
  help: the names of each generic type must be unique

