crates/stef-compiler/tests/snapshots/compiler__error_resolve@import_root.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "use datetime::Other;"
input_file: crates/stef-compiler/tests/inputs/resolve/import_root.stef
---
  × type resolution failed
  ├─▶ failed resolving import statement
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime❬Y❭
   ╭─[import_root.stef:1:1]
 1 │ use datetime::Other;
   ·               ──┬──
   ·                 ╰── used here
   ╰────

