crates/stef-compiler/tests/snapshots/compiler__error_resolve@import_sub.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "use datetime::other;"
input_file: crates/stef-compiler/tests/inputs/resolve/import_sub.stef
---
  × type resolution failed
  ├─▶ failed resolving import statement
  ╰─▶ module ❬Y❭other❬Y❭ not found
   ╭─[import_sub.stef:1:1]
 1 │ use datetime::other;
   ·               ──┬──
   ·                 ╰── used here
   ╰────
  help: the resolution stopped at module path ❬Y❭datetime❬Y❭

