crates/stef-compiler/tests/snapshots/compiler__error_resolve@import_sub_type.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "use datetime::timing::Other;"
input_file: crates/stef-compiler/tests/inputs/resolve/import_sub_type.stef
---
  × type resolution failed
  ├─▶ failed resolving import statement
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime::timing❬Y❭
   ╭─[import_sub_type.stef:1:1]
 1 │ use datetime::timing::Other;
   ·                       ──┬──
   ·                         ╰── used here
   ╰────

