crates/stef-compiler/tests/snapshots/compiler__error_resolve@local_gens_mismatch.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample {\n    value: Other @1,\n}\n\nstruct Other<T>(T @1)"
input_file: crates/stef-compiler/tests/inputs/resolve/local_gens_mismatch.stef
---
  × type resolution failed
  ├─▶ failed resolving type in local modules
  ╰─▶ the definition has ❬Y❭1❬Y❭ generics but the use side has ❬Y❭0❬Y❭
   ╭─[local_gens_mismatch.stef:1:1]
 1 │ struct Sample {
 2 │     value: Other @1,
   ·            ──┬──
   ·              ╰── used here
 3 │ }
 4 │ 
 5 │ struct Other<T>(T @1)
   ·        ──┬──
   ·          ╰── declared here
   ╰────
  help: the amount of generics must always match

